🛠️ pin dependencies, correct their locations

--- a/v0/package.json
+++ b/v0/package.json
@@ -1,9 +1,11 @@
 {
   "name": "v0",
   "private": true,
+  "dependencies": {
+    "@11ty/eleventy": "3.1.0"
+  },
   "scripts": {
     "dev": "eleventy --serve --input=. --output=./_site",
     "build": "eleventy --input=. --output=./_site"
-  },
-  "type": "module"
+  }
 }
