--- a/v1/package.json
+++ b/v1/package.json
@@ -1,13 +1,11 @@
 {
   "name": "v1",
   "private": true,
+  "dependencies": {
+    "@11ty/eleventy": "3.1.0"
+  },
   "scripts": {
     "dev": "eleventy --serve --input=. --output=./_site",
     "build": "eleventy --input=. --output=./_site"
-  },
-  "type": "module",
-  "packageManager": "pnpm@10.7.1",
-  "dependencies": {
-    "@11ty/eleventy": "^3.1.0"
   }
 }
