--- a/conway/package.json
+++ b/conway/package.json
@@ -14,11 +14,11 @@
     "customize-cra": "0.2.12",
     "less": "3.9.0",
     "less-loader": "4.1.0",
-    "node-sass": "4.10.0",
+    "sass": "1.89.0",
     "react-app-rewired": "2.1.1"
   },
   "scripts": {
-    "sass": "node ./scripts/sass-reduce.js && node-sass --watch src/styles/scss -o src/styles/css",
+    "sass": "node ./scripts/sass-reduce.js && sass --watch src/styles/scss:src/styles/css",
     "start": "SKIP_PREFLIGHT_CHECK=true react-app-rewired --openssl-legacy-provider start",
     "build": "SKIP_PREFLIGHT_CHECK=true react-app-rewired --openssl-legacy-provider build",
     "eject": "SKIP_PREFLIGHT_CHECK=true react-scripts --openssl-legacy-provider eject"
