--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,10 +1,14 @@
 packages:
   - v0
   - v1
-  - conway
   - reduxstagram
+  - conway
+  - md-prevuer
 onlyBuiltDependencies:
   - '@parcel/watcher'
   - core-js
+  - ejs
+  - esbuild
   - fsevents
   - node-sass
+  - yorkie
