--- a/bgcg/package.json
+++ b/bgcg/package.json
@@ -2,6 +2,10 @@
   "name": "bgcg",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "pnpm": "10.7.1",
+    "node": "23.10.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.3.3",
