--- a/conway/package.json
+++ b/conway/package.json
@@ -1,6 +1,11 @@
 {
   "name": "conway",
   "version": "1.0.0",
+  "private": true,
+  "engines": {
+    "pnpm": "10.7.1",
+    "node": "23.10.0"
+  },
   "dependencies": {
     "antd": "3.16.2",
     "react": "16.6.3",
