--- a/reduxstagram/package.json
+++ b/reduxstagram/package.json
@@ -2,6 +2,10 @@
   "name": "reduxstagram",
   "version": "2.0.0",
   "private": true,
+  "engines": {
+    "pnpm": "10.7.1",
+    "node": "23.10.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/leeandher/Reduxstagram"
