--- a/v0/package.json
+++ b/v0/package.json
@@ -1,6 +1,10 @@
 {
   "name": "v0",
   "private": true,
+  "engines": {
+    "pnpm": "10.7.1",
+    "node": "23.10.0"
+  },
   "dependencies": {
     "@11ty/eleventy": "3.1.0"
   },
