--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bgcg:dev": "pnpm --filter bgcg start",
     "bgcg:build": "pnpm --filter bgcg build",
     "fyi:dev": "pnpm --filter fyi dev",
-    "fyi:build": "pnpm --filter fyi build"
+    "fyi:build": "pnpm --filter fyi build",
+    "space:dev": "pnpm --filter space-shooter dev",
+    "space:build": "pnpm --filter space-shooter build"
   },
   "type": "module"
 }
