--- a/v2/package.json
+++ b/v2/package.json
@@ -9,53 +9,42 @@
   "scripts": {
     "dev": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "clean": "gatsby clean"
   },
   "dependencies": {
-    "@reach/router": "1.2.1",
-    "gatsby": "2.24.52",
-    "gatsby-image": "2.2.4",
-    "gatsby-plugin-netlify-cms": "3.0.18",
-    "gatsby-plugin-nprogress": "2.0.10",
-    "gatsby-plugin-offline": "2.0.25",
-    "gatsby-plugin-react-helmet": "3.0.8",
-    "gatsby-plugin-sitemap": "2.0.12",
-    "gatsby-plugin-styled-components": "3.0.4",
-    "gatsby-plugin-transition-link": "1.12.2",
-    "gatsby-remark-prismjs": "3.2.8",
-    "gatsby-source-filesystem": "2.0.26",
-    "gatsby-transformer-remark": "2.1.17",
-    "graphql": "14.1.1",
-    "lodash": "4.17.19",
-    "marked": "0.7.0",
-    "netlify-cms": "2.9.1",
-    "prismjs": "1.16.0",
-    "prop-types": "15.7.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-helmet": "5.2.0",
-    "react-icons": "3.5.0",
+    "@gatsbyjs/reach-router": "2.0.1",
+    "@use-gesture/react": "10.3.0",
+    "gatsby": "5.12.7",
+    "gatsby-plugin-nprogress": "5.14.0",
+    "gatsby-plugin-react-helmet": "6.14.0",
+    "gatsby-plugin-styled-components": "6.14.0",
+    "gatsby-remark-prismjs": "7.14.0",
+    "gatsby-source-filesystem": "5.14.0",
+    "gatsby-transformer-remark": "6.12.3",
+    "graphql": "16.8.1",
+    "lodash": "4.17.21",
+    "marked": "12.0.0",
+    "netlify-cms-app": "2.15.72",
+    "prismjs": "1.29.0",
+    "prop-types": "15.8.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-helmet": "6.1.0",
+    "react-icons": "5.0.1",
     "react-konami": "0.6.2",
-    "react-particles-js": "2.4.2",
-    "react-spring": "8.0.15",
+    "react-spring": "9.7.3",
     "react-typist": "2.0.5",
+    "react-particles-js": "2.4.2",
     "react-with-gesture": "4.0.8",
-    "slugify": "1.3.4",
-    "styled-components": "4.1.3"
+    "slugify": "1.6.6",
+    "styled-components": "6.1.18"
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
-    "babel-plugin-styled-components": "1.10.0",
-    "eslint": "5.3.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "4.1.0",
-    "eslint-plugin-html": "5.0.3",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-node": "8.0.1",
-    "eslint-plugin-prettier": "3.0.1",
-    "eslint-plugin-react": "7.12.4",
-    "prettier": "1.16.4",
-    "react-error-overlay": "5.1.4"
+    "gatsby-link": "5.14.1",
+    "gatsby-plugin-pnpm": "^1.2.10",
+    "gatsby-script": "2.14.0",
+    "mitt": "3.0.1",
+    "query-string": "9.1.2"
   }
 }
