✨ Allow v2 to deploy

--- a/v2/package.json
+++ b/v2/package.json
@@ -25,7 +25,6 @@
     "graphql": "16.8.1",
     "lodash": "4.17.21",
     "marked": "12.0.0",
-    "netlify-cms-app": "2.15.72",
     "prismjs": "1.29.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
@@ -42,7 +41,7 @@
   },
   "devDependencies": {
     "gatsby-link": "5.14.1",
-    "gatsby-plugin-pnpm": "^1.2.10",
+    "gatsby-plugin-pnpm": "1.2.10",
     "gatsby-script": "2.14.0",
     "mitt": "3.0.1",
     "query-string": "9.1.2"
