--- a/v2/netlify.toml
+++ b/v2/netlify.toml
@@ -1,7 +1,3 @@
 [build]
-base = ""
-publish = "public"
-command = "npm run build"
-
-[build.environment]
-NODE_OPTIONS = "--max_old_space_size=4096"
+command = "pnpm run v2:build"
+publish = "v2/public"
