--- a/v2/package.json
+++ b/v2/package.json
@@ -16,6 +16,7 @@
     "@gatsbyjs/reach-router": "2.0.1",
     "@use-gesture/react": "10.3.0",
     "gatsby": "5.12.7",
+    "gatsby-plugin-copy-files-enhanced": "1.1.1",
     "gatsby-plugin-nprogress": "5.14.0",
     "gatsby-plugin-react-helmet": "6.14.0",
     "gatsby-plugin-styled-components": "6.14.0",
@@ -32,9 +33,9 @@
     "react-helmet": "6.1.0",
     "react-icons": "5.0.1",
     "react-konami": "0.6.2",
+    "react-particles-js": "2.4.2",
     "react-spring": "9.7.3",
     "react-typist": "2.0.5",
-    "react-particles-js": "2.4.2",
     "react-with-gesture": "4.0.8",
     "slugify": "1.6.6",
     "styled-components": "6.1.18"
