--- a/v2/package.json
+++ b/v2/package.json
@@ -10,13 +10,13 @@
     "dev": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "redock": "mkdir -p static/shared && cp ../_shared/dock.js static/shared/"
   },
   "dependencies": {
     "@gatsbyjs/reach-router": "2.0.1",
     "@use-gesture/react": "10.3.0",
     "gatsby": "5.12.7",
-    "gatsby-plugin-copy-files-enhanced": "1.1.1",
     "gatsby-plugin-nprogress": "5.14.0",
     "gatsby-plugin-react-helmet": "6.14.0",
     "gatsby-plugin-styled-components": "6.14.0",
