🚧 WIP for now thats delicious

--- a/delicious/settings-dev.env.template
+++ b/delicious/settings-dev.env.template
@@ -1,5 +1,5 @@
 NODE_ENV=development
-DATABASE=
+DATABASE=mongodb+srv://admin:<db_password>@cluster0.ypj4m7b.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
