--- a/delicious/package.json
+++ b/delicious/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "now-thats-delicious-leeandher",
+  "name": "delicious",
   "version": "0.0.1",
   "private": true,
   "engines": {
@@ -9,14 +9,13 @@
     "start": "node ./start.js",
     "watch": "nodemon ./start.js --ignore public/",
     "dev": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
-    "assets": "webpack -w --display-max-modules 0",
+    "assets": "webpack -w --mode development",
     "sample": "node ./data/load-sample-data.js",
     "blowitallaway": "node ./data/load-sample-data.js --delete",
     "now": "now -e DB_USER=@db_user -e DB_PASS=@db_pass -e NODE_ENV=\"production\" -e PORT=80"
   },
   "browserslist": "last 3 versions",
   "dependencies": {
-    "aws-sdk": "^2.367.0",
     "axios": "0.15.3",
     "body-parser": "^1.18.3",
     "connect-flash": "0.1.1",
@@ -48,18 +47,18 @@
     "validator": "7.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "6.7.7",
+    "autoprefixer": "10.4.21",
     "babel-core": "6.24.0",
-    "babel-loader": "6.4.0",
+    "babel-loader": "10.0.0",
     "babel-preset-env": "^1.6.0",
     "concurrently": "3.4.0",
-    "css-loader": "0.28.11",
-    "extract-text-webpack-plugin": "2.1.0",
-    "node-sass": "^4.7.2",
+    "css-loader": "7.1.2",
+    "mini-css-extract-plugin": "2.9.2",
+    "sass": "^1.89.0",
     "nodemon": "^1.18.7",
     "now": "^6.4.1",
-    "postcss-loader": "1.3.3",
-    "sass-loader": "6.0.3",
-    "webpack": "2.2.1"
+    "postcss-loader": "8.1.1",
+    "sass-loader": "16.0.5",
+    "webpack": "5.99.8"
   }
 }
