--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,6 +11,8 @@ packages:
   - stacker-news
   - v2
   - delicious
+  - offline
+  - del
 onlyBuiltDependencies:
   - '@parcel/watcher'
   - core-js
