--- a/del/package.json
+++ b/del/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "del",
+  "name": "delicious",
   "private": true,
-  "version": "0.0.1",
+  "version": "2",
   "type": "module",
   "scripts": {
     "dev": "vite dev",
