--- a/delicious/package.json
+++ b/delicious/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "2",
   "type": "module",
+  "engines": {
+    "pnpm": "10.7.1",
+    "node": "23.10.0"
+  },
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -12,7 +16,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "6.0.1",
+    "@sveltejs/adapter-netlify": "5.0.2",
     "@sveltejs/kit": "2.21.1",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
     "svelte": "5.30.2",
