--- a/fyi/package.json
+++ b/fyi/package.json
@@ -1,28 +1,22 @@
 {
   "name": "fyi",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "private": true,
+  "type": "module",
   "engines": {
     "pnpm": "10.7.1",
     "node": "23.10.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "core-js": "2.6.5",
-    "lodash": "4.17.15",
-    "register-service-worker": "1.6.2",
-    "vue": "2.6.10",
-    "vue-class-component": "7.0.2",
-    "vue-clipboard2": "0.3.1",
-    "vue-property-decorator": "8.1.0"
+    "vue": "3.5.14"
   },
   "devDependencies": {
-    "vite": "6.0.6",
-    "vite-plugin-vue2": "2.0.3",
-    "typescript": "3.4.3",
-    "vue-template-compiler": "2.6.10"
+    "@vitejs/plugin-vue": "5.2.4",
+    "vite": "6.3.5"
   }
 }
