--- a/sick-fits/package.json
+++ b/sick-fits/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.8"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "next": "15.1.8",
+    "styled-components": "6.1.18",
+    "nprogress": "0.2.0"
   }
 }
