--- a/sick-fits/package.json
+++ b/sick-fits/package.json
@@ -13,6 +13,7 @@
     "react-dom": "19.1.0",
     "next": "15.1.8",
     "styled-components": "6.1.18",
+    "date-fns": "4.1.0",
     "nprogress": "0.2.0"
   }
 }
