--- a/catch-of-the-day/package.json
+++ b/catch-of-the-day/package.json
@@ -7,7 +7,8 @@
     "node": "23.10.0"
   },
   "devDependencies": {
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "eslint": "6.2.0"
   },
   "dependencies": {
     "prop-types": "15.6.0",
