--- a/reduxstagram/package.json
+++ b/reduxstagram/package.json
@@ -12,7 +12,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "raven-js": "3.27.0",
     "react": "15.0.2",
     "react-addons-css-transition-group": "15.0.2",
     "react-dom": "15.0.2",
@@ -21,6 +20,9 @@
     "react-router-redux": "4.0.8",
     "react-scripts": "2.1.8",
     "redux": "4.0.1"
+  },
+  "devDependencies": {
+    "eslint": "6.2.0"
   },
   "scripts": {
     "start": "SKIP_PREFLIGHT_CHECK=true react-scripts --openssl-legacy-provider start",
