--- a/sick-fits/netlify.toml
+++ b/sick-fits/netlify.toml
@@ -1,4 +1,7 @@
 [build]
 command = "pnpm run sick:build"
 publish = "sick-fits/.next"
-# Requires nextjs build plugin -> https://app.netlify.com/plugins/@netlify/plugin-nextjs/install
+
+[[plugins]]
+package = "@netlify/plugin-nextjs"
+# https://app.netlify.com/plugins/@netlify/plugin-nextjs/install
