--- a/stacker-news/package.json
+++ b/stacker-news/package.json
@@ -1,12 +1,17 @@
 {
   "name": "stacker-news",
   "version": "1.0.0",
+  "engines": {
+    "pnpm": "10.7.1",
+    "node": "23.10.0"
+  },
   "dependencies": {
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "2.1.8",
+    "eslint": "6.2.0"
   },
   "scripts": {
     "start": "SKIP_PREFLIGHT_CHECK=true react-scripts --openssl-legacy-provider start",
