--- a/package.json
+++ b/package.json
@@ -5,48 +5,49 @@
   "packageManager": "pnpm@10.7.1",
   "engines": {
     "pnpm": "10.7.1",
-    "node": "23.10.0"
+    "node": "23.10.0",
+    "yarn": "4.9.2"
   },
   "scripts": {
-    "v0:dev": "pnpm --filter v0 dev",
-    "v0:build": "pnpm --filter v0 build",
-    "v0:deploy": "netlify deploy --filter v0 --prod",
-    "v1:dev": "pnpm --filter v1 dev",
-    "v1:build": "pnpm --filter v1 build",
-    "v1:deploy": "netlify deploy --filter v1 --prod",
-    "redux:dev": "pnpm --filter reduxstagram start",
-    "redux:build": "pnpm --filter reduxstagram build",
-    "redux:deploy": "netlify deploy --filter reduxstagram --prod",
-    "conway:dev": "pnpm --filter conway start",
-    "conway:build": "pnpm --filter conway build",
-    "conway:deploy": "netlify deploy --filter conway",
-    "md:dev": "pnpm --filter md-prevuer dev",
-    "md:build": "pnpm --filter md-prevuer build",
-    "md:deploy": "netlify deploy --filter md-prevuer --prod",
-    "bgcg:dev": "pnpm --filter bgcg dev",
     "bgcg:build": "pnpm --filter bgcg build",
     "bgcg:deploy": "netlify deploy --filter bgcg --prod",
-    "fyi:dev": "pnpm --filter fyi dev",
-    "fyi:build": "pnpm --filter fyi build",
-    "fyi:deploy": "netlify deploy --filter fyi --prod",
-    "space:dev": "pnpm --filter space-shooter dev",
-    "space:build": "pnpm --filter space-shooter build",
-    "space:deploy": "netlify deploy --filter space-shooter --prod",
-    "catch:dev": "pnpm --filter catch-of-the-day dev",
+    "bgcg:dev": "pnpm --filter bgcg dev",
     "catch:build": "pnpm --filter catch-of-the-day build",
     "catch:deploy": "netlify deploy --filter catch-of-the-day --prod",
-    "stacker:dev": "pnpm --filter stacker-news start",
-    "stacker:build": "pnpm --filter stacker-news build",
-    "stacker:deploy": "netlify deploy --filter stacker-news --prod",
-    "v2:dev": "pnpm --filter v2 dev",
-    "v2:build": "pnpm --filter v2 build",
-    "v2:deploy": "netlify deploy --filter v2 --prod",
-    "delicious:dev": "pnpm --filter delicious dev",
+    "catch:dev": "pnpm --filter catch-of-the-day dev",
+    "conway:build": "yarn --cwd conway build",
+    "conway:deploy": "netlify deploy --filter conway --prod",
+    "conway:dev": "yarn --cwd conway start",
     "delicious:build": "pnpm --filter delicious build",
     "delicious:deploy": "netlify deploy --filter delicious --prod",
-    "sick:dev": "pnpm --filter sick-fits dev",
+    "delicious:dev": "pnpm --filter delicious dev",
+    "fyi:build": "pnpm --filter fyi build",
+    "fyi:deploy": "netlify deploy --filter fyi --prod",
+    "fyi:dev": "pnpm --filter fyi dev",
+    "md:build": "pnpm --filter md-prevuer build",
+    "md:deploy": "netlify deploy --filter md-prevuer --prod",
+    "md:dev": "pnpm --filter md-prevuer dev",
+    "redux:build": "pnpm --filter reduxstagram build",
+    "redux:deploy": "netlify deploy --filter reduxstagram --prod",
+    "redux:dev": "pnpm --filter reduxstagram start",
     "sick:build": "pnpm --filter sick-fits build",
-    "sick:deploy": "netlify deploy --filter sick-fits --prod"
+    "sick:deploy": "netlify deploy --filter sick-fits --prod",
+    "sick:dev": "pnpm --filter sick-fits dev",
+    "space:build": "pnpm --filter space-shooter build",
+    "space:deploy": "netlify deploy --filter space-shooter --prod",
+    "space:dev": "pnpm --filter space-shooter dev",
+    "stacker:build": "pnpm --filter stacker-news build",
+    "stacker:deploy": "netlify deploy --filter stacker-news --prod",
+    "stacker:dev": "pnpm --filter stacker-news start",
+    "v0:build": "pnpm --filter v0 build",
+    "v0:deploy": "netlify deploy --filter v0 --prod",
+    "v0:dev": "pnpm --filter v0 dev",
+    "v1:build": "pnpm --filter v1 build",
+    "v1:deploy": "netlify deploy --filter v1 --prod",
+    "v1:dev": "pnpm --filter v1 dev",
+    "v2:build": "pnpm --filter v2 build",
+    "v2:deploy": "netlify deploy --filter v2 --prod",
+    "v2:dev": "pnpm --filter v2 dev"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
